stack auth and proxy setup

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,10 @@
     "@iconify/react": "^6.0.2",
     "@libsql/client": "^0.15.15",
     "@repo/ui": "*",
+    "@stackframe/stack": "^2.8.49",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.14",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
