--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@convex-dev/workpool": "^0.2.19",
     "convex": "^1.28.0",
     "svix": "^1.77.0"
   }
